# StifelioWeb

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
DjangoProject1/: .gitignore  asgi.py  settings.py  urls.py  wsgi.py
StifelioWeb/: asgi.py  settings.py  urls.py  wsgi.py
appProva/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
appProva/Templates/: login.html
appProva/migrations/: 0001_initial.py  0002_usuari_delete_user.py
appProva/templates/: base.html  page2.html  register.html
